# backend-fastapi

./: .gitignore  Pipfile  README.md  gunicorn.conf.py  main.py  pyproject.toml
app/: routes.py
app/projects/: urls.py
app/projects/controllers/: sentiment_controller.py
backend/: dependencies.py  helpers.py  middlewares.py  prometheus.py  routes.py
backend/app/: urls.py
backend/app/controllers/: sentiment_controller.py
backend/app/core/: sentiment_analysis.py
backend/app/formatters/: sentiment.py
backend/app/models/: common.py  response.py
backend/app/schemas/: public.py
backend/app/validators/: function.py
backend/database/: session.py
backend/exceptions/: exception_handlers.py  exceptions.py
backend/logging/: formatters.py  helpers.py  loggers.py
config/: base.py  database.py  logging.py  response.py  slack.py
tests/: test_example.py
