[tool.poetry]
name = "backend-fastapi"
version = "0.1.0"
description = ""
authors = ["mictsai60229 <mictsai@nlplab.cc>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
SQLAlchemy = "^1.3.23"
python-json-logger = "^2.0.1"
psycopg2-binary = "^2.8.6"
prometheus-client = "^0.9.0"
gunicorn = "^20.0.4"
aiohttp = "^3.7.4"
slack-sdk = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
